[UPDATE] endpoints with proper logic
The logic behind category suggestion management is working properly.